--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-rating-system": "^1.0.7",
     "react-scripts": "1.1.4"
   },
   "scripts": {
