--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "async": "^2.6.0",
     "axios": "^0.18.0",
+    "history": "^4.7.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-rating-system": "^1.0.7",
