--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "axios": "^0.18.0",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.12",
+    "morgan": "^1.9.0",
+    "qs": "^6.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
