--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "history": "^4.7.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-materialize": "^2.2.0",
     "react-rating-system": "^1.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
