--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-materialize": "^2.2.0",
     "react-rating-system": "^1.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-stripe-checkout": "^2.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
