--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "material-ui": "^0.20.0",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.12",
     "morgan": "^1.9.0",
