--- a/client/package.json
+++ b/client/package.json
@@ -5,15 +5,18 @@
   "private": true,
   "dependencies": {
     "async": "^2.6.0",
+    "auth0-js": "^9.4.2",
     "axios": "^0.18.0",
     "history": "^4.7.2",
     "react": "^16.3.1",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
     "react-materialize": "^2.2.0",
     "react-rating-system": "^1.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
-    "react-stripe-checkout": "^2.6.3"
+    "react-stripe-checkout": "^2.6.3",
+    "request": "^2.85.0"
   },
   "scripts": {
     "start": "react-scripts start",
