--- a/package.json
+++ b/package.json
@@ -18,9 +18,17 @@
     "stripe": "^5.8.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+  },
+  "engines": {
+    "node": "8.9.2"
   }
 }
+
+
+
+
+
+
+
